(FE-OL #1) Add support for converting html to pdf

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4588",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -29,11 +29,15 @@
     "js-sha512": "^0.8.0",
     "lowdb": "^6.1.1",
     "luxon": "^3.4.4",
+    "path": "^0.12.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.4.2",
+    "puppeteer": "^21.5.2",
+    "relaxedjs": "^0.2.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.89.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
@@ -45,7 +49,8 @@
     "@types/handlebars": "^4.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.3.4",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.18.9",
+    "@types/uuid": "^9.0.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
