--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "allowJs": true,
+    "checkJs": false,
+
     "lib": [
       "ES2022",
       "dom"
@@ -29,5 +32,8 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "node_modules/relaxedjs/**/*"
+  ]
 }
