--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "relaxedjs": "^0.2.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "webpack": "^5.89.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
@@ -57,6 +56,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "typescript": "~5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
